# pdf-preview-server

./: Cargo.toml  test.txt
.github/workflows/: release.yml
src/: index.html  main.rs
