[package]
name = "pdf-preview-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.20"
actix-files = "0"
actix-web-sse = { git = "https://github.com/arkuna23/actix-web-sse" }
env_logger = "0"
tokio = "1"
log = "0"
notify = "6"

[profile.release]
lto = true
strip = false
